# small-objects-detection-benchmark

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
models/: README.md
notebooks_and_scripts/future_work/: 4_robustness.py  4_tta.py
notebooks_and_scripts/kaggle/: 3.3.1-yolov8-baseline.md  3.3.2-3.3.5-yolov8m-aug.md  3.3.6-yolov11m-aug.md  3.3.7-yolov11-p2.md  3.4-fasterrcnn-lightning-wandb.md  3.5.1-rtdetr-ultralytics.md  3.5.2-rf-detr-roboflow.md  3.7.3-random-search-conf-iou_PART_1.md  3.7.3-random-search-conf-iou_PART_2.md  3.7.5-tide.md  3_3_1_yolov8-baseline.md
notebooks_and_scripts/local/: 3.7.6_ensembling.py  3.7.7_non_tiled_eval.py  3.7.7_tiling.py  3.7_analyze_results.py
notebooks_and_scripts/local/3.7.4_uncertainty_mcnemar/: bootstrap_coco_map.py  export_predictions.py  mcnemar_test.py  pairwise_delta.py
src/odc/benchmark/: __init__.py  pipeline.py
src/odc/benchmark/datasets/: __init__.py  base.py  data_utils.py  skyfusion_loader.py
src/odc/benchmark/metrics/: __init__.py  detection_metrics.py  performance_metrics.py
src/odc/benchmark/models/: __init__.py  base.py  data_models.py  fasterrcnn_adapter.py  rfdetr_adapter.py  ultralytics_adapter.py
src/odc/benchmark/reporters/: __init__.py  base_reporter.py  latex_reporter.py
src/odc/benchmark/reporters/templates/: appendix_tables.tex.jinja  benchmark_report.tex.jinja  model_comparison.tex.jinja
src/odc/benchmark/utils/: __init__.py  config_loader.py  enhanced_results_database.py  results_database.py
src/odc/benchmark/visualization/: __init__.py  detection_visualizer.py  plot_generators.py
src/odc/dataset_eda/: __init__.py  analyze_dataset_module.py  count_invalid_boxes_module.py  eda_pipeline.py  generate_bbox_heatmaps_module.py  histogram_visualizations_module.py  report_generator.py  visualize_dataset_module.py
src/scripts/: augment_dataset.py  benchmark.py  count_density_bins.py  dataset_eda.py  generate_density_model_grid.py  generate_tide_error_plots.py  plot_size_bin_comparison.py  size_bin_benchmark.py  spatial_density_benchmark.py
